--- a/catcab/app/common/stylesheets/application.css
+++ b/catcab/app/common/stylesheets/application.css
@@ -4,9 +4,9 @@
   font-weight: 600;
 }
 
-.button{
-	background-color: rgb(131, 110, 170) !important; 
-	border: none !important;
+.button-royal, .button-positive {
+	background-color: rgb(131, 110, 170) !important;
+  border-color: rgb(131, 110, 170) !important;
 }
 
 /* CSS For Loading Symbol */
@@ -53,7 +53,7 @@
 }
 /* End CSS For Loading Symbol */
 
-.img_center{
+.img_center {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -62,11 +62,18 @@
   border-radius: 10px;
 }
 
-#image_block{
+#image_block {
   margin-bottom: 5px;
 }
 
+/* List styles */
+.item-divider:first-child {
+  font-size: 24px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  font-weight: bold;
+}
 
-
-
-
+.list:last-child.card {
+  margin-bottom: 20px;
+}
