Show only first initial of last name?

--- a/catcab/app/users/views/home.html
+++ b/catcab/app/users/views/home.html
@@ -16,7 +16,7 @@
 
 		<div class="item item-thumbnail-left">
 			<img ng-src="{{user.imgSrc}}">
-			<h1>{{user.firstName}} {{user.lastName}}</h1>
+			<h1>{{user.firstName}} {{name_to_initial(user.lastName)}}</h1>
 		</div>
 
 		<div class="item item-icon-left">
